[package]
name = "sockets"
version = "0.1.0"
authors = ["27190057897"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
nix = "0.15.0"

[build-dependencies]
cmake = "0.1"